--- a/index.html
+++ b/index.html
@@ -1,22 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <title>Rafael Couto</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rafael Couto</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <header>
-        <nav class="menu">
-          <ul>
-            <li><a href = "">Sobre</a></li>
-            <li><a href = "">Portfólio</a></li>
-            <li><a href = "">Contatos</a></li>
-          </ul>
-        </nav>
-        <h1 class="site-title">Rafael S Couto</h1>
-        <h2 class="site-subtitle">jr. web developer</h2>
-      </header>
+  <header>
+    <nav class="menu">
+      <ul>
+        <li><a href="">Sobre</a></li>
+        <li><a href="">Portfólio</a></li>
+        <li><a href="">Contatos</a></li>
+      </ul>
+    </nav>
+    <div>
+      <h1 class="site-title">Rafael S Couto</h1>
+      <h2 class="site-subtitle">jr. web developer</h2>
+    </div>
+  </header>
+  <section>
+    <h2>Portfólio</h2>
+    <figure>
+      <img class="img-portfolio" src="./imagens/picture-dev.jpg" alt="developer">
+      <figcaption>Developer</figcaption>
+    </figure>
+    <figure>
+      <img class="img-portfolio" src="./imagens/picture-notebook.jpeg" alt="codding">
+      <figcaption>Codding</figcaption>
+    </figure>
+    <figure>
+      <img class="img-portfolio" src="./imagens/picture-design.jpeg" alt="Web design">
+      <figcaption>Web design</figcaption>
+    </figure>
+    <figure>
+      <img class="img-portfolio" src="./imagens/picture-project.jpg" alt="Project">
+      <figcaption>Project</figcaption>
+    </figure>
+  </section>
 </body>
+
 </html>
