definição de fontes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rafael Couto</title>
   <link rel="stylesheet" href="css/style.css">
-</head>
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=PT+Serif&family=Roboto&display=swap" rel="stylesheet"></head>
 
 <body>
 
@@ -16,7 +16,7 @@
       <ul>
         <li><a href="">Sobre</a></li>
         <li><a href="">Portfólio</a></li>
-        <li><a href="">Contatos</a></li>
+        <li><a href="">Contato</a></li>
       </ul>
     </nav>
     <div>
