alinhamento/colunas grid site
adição de incluir mais colunas ao grid quando a tela aumentar e alinhamento dos elementos da aba portfolio

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rafael Couto</title>
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=PT+Serif&family=Roboto&display=swap" rel="stylesheet"></head>
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=PT+Serif&family=Roboto&display=swap"
+    rel="stylesheet">
+</head>
 
 <body>
 
-  
+
   <header>
     <nav class="menu">
       <ul>
@@ -24,24 +26,26 @@
       <h2 class="site-subtitle">jr. web developer</h2>
     </div>
   </header>
-  <section>
+  <section class="portfolio">
     <h2>Portfólio</h2>
-    <figure>
-      <img class="img-portfolio" src="./imagens/picture-dev.jpg" alt="developer">
-      <figcaption>Developer</figcaption>
-    </figure>
-    <figure>
-      <img class="img-portfolio" src="./imagens/picture-notebook.jpeg" alt="codding">
-      <figcaption>Codding</figcaption>
-    </figure>
-    <figure>
-      <img class="img-portfolio" src="./imagens/picture-design.jpeg" alt="Web design">
-      <figcaption>Web design</figcaption>
-    </figure>
-    <figure>
-      <img class="img-portfolio" src="./imagens/picture-project.jpg" alt="Project">
-      <figcaption>Project</figcaption>
-    </figure>
+    <div class="grid">
+      <figure>
+        <img class="img-portfolio" src="./imagens/picture-dev.jpg" alt="developer">
+        <figcaption>Developer</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./imagens/picture-notebook.jpeg" alt="codding">
+        <figcaption>Codding</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./imagens/picture-design.jpeg" alt="Web design">
+        <figcaption>Web design</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./imagens/picture-project.jpg" alt="Project">
+        <figcaption>Project</figcaption>
+      </figure>
+    </div>
   </section>
 </body>
 
