icons de contatos

--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rafael Couto</title>
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=PT+Serif&family=Roboto&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=PT+Serif&family=Roboto&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/f53230b449.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
-
   <header>
     <nav class="menu">
       <ul>
@@ -47,6 +45,14 @@
       </figure>
     </div>
   </section>
-</body>
+  <section class="contato" id="contato">
+    <h2>Contato</h2>
+    <div class="grid icons">
+      <a target="_blank" href="https://github.com/rafaelcouto-coder"><i class="fab fa-github"></i></a>
+      <a target="_blank" href="https://www.linkedin.com/in/rafael-couto-4b5360161/"><i class="fab fa-linkedin"></i></a>
+      <a target="_blank" href="rafaelcouto.contato@gmail.com"><i class="fas fa-envelope-square"></i></a>
+    </div>
+  </section>
+</body> 
 
 </html>
