--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
   <header>
     <nav class="menu">
-      <ul>
-        <li><a href="">Sobre</a></li>
-        <li><a href="">Portfólio</a></li>
-        <li><a href="">Contato</a></li>
+      <ul class="container">
+        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#portfolio">Portfólio</a></li>
+        <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
     <div>
@@ -24,35 +24,59 @@
       <h2 class="site-subtitle">jr. web developer</h2>
     </div>
   </header>
-  <section class="portfolio">
-    <h2>Portfólio</h2>
-    <div class="grid">
-      <figure>
-        <img class="img-portfolio" src="./imagens/picture-dev.jpg" alt="developer">
-        <figcaption>Developer</figcaption>
+    <section class="sobre" id="sobre container">
+      <h2>Sobre</h2>
+
+      <figure class="avatar">
+        <img src="https://media-exp1.licdn.com/dms/image/C4D03AQEsSwQiBHVpJA/profile-displayphoto-shrink_200_200/0?e=1595462400&v=beta&t=X6jVAey53LslR3VM5u7Puf-va4avbNxtTMh_feMWqzs" alt="">
       </figure>
-      <figure>
-        <img class="img-portfolio" src="./imagens/picture-notebook.jpeg" alt="codding">
-        <figcaption>Codding</figcaption>
-      </figure>
-      <figure>
-        <img class="img-portfolio" src="./imagens/picture-design.jpeg" alt="Web design">
-        <figcaption>Web design</figcaption>
-      </figure>
-      <figure>
-        <img class="img-portfolio" src="./imagens/picture-project.jpg" alt="Project">
-        <figcaption>Project</figcaption>
-      </figure>
-    </div>
-  </section>
-  <section class="contato" id="contato">
-    <h2>Contato</h2>
-    <div class="grid icons">
-      <a target="_blank" href="https://github.com/rafaelcouto-coder"><i class="fab fa-github"></i></a>
-      <a target="_blank" href="https://www.linkedin.com/in/rafael-couto-4b5360161/"><i class="fab fa-linkedin"></i></a>
-      <a target="_blank" href="rafaelcouto.contato@gmail.com"><i class="fas fa-envelope-square"></i></a>
-    </div>
-  </section>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam asperiores recusandae dicta voluptatibus! Harum repudiandae laborum doloremque enim culpa. Qui esse rerum rem sunt vel, fugiat corporis ex officia ad.
+      </p>
+
+      <p>
+        Neque corrupti aut dolore dolor repudiandae, officiis in cupiditate ex placeat adipisci iusto, officia atque molestiae laboriosam aliquam minima. Repellendus blanditiis dolores quia cum sint veritatis! Hic accusantium deleniti odio?
+      </p>
+
+      <p>
+        Quo itaque maxime eius quos, doloribus ab, a enim, velit quod dicta quam. Consequuntur facere quis eum, quaerat aliquid eos ipsa accusantium cumque modi. Quos quis perspiciatis ipsam quisquam qui?
+      </p>
+
+      <p>
+        Doloribus ea, accusantium eaque unde minus eius placeat ipsum asperiores, eos fuga laborum totam esse ratione ab neque nostrum officiis velit. Consequuntur, praesentium iure possimus officiis voluptatum non laborum blanditiis.
+      </p>
+
+    </section>
+    <section class="portfolio" id="portfolio container">
+      <h2>Portfólio</h2>
+      <div class="grid">
+        <figure>
+          <img class="img-portfolio" src="./imagens/picture-dev.jpg" alt="developer">
+          <figcaption>Developer</figcaption>
+        </figure>
+        <figure>
+          <img class="img-portfolio" src="./imagens/picture-notebook.jpeg" alt="codding">
+          <figcaption>Codding</figcaption>
+        </figure>
+        <figure>
+          <img class="img-portfolio" src="./imagens/picture-design.jpeg" alt="Web design">
+          <figcaption>Web design</figcaption>
+        </figure>
+        <figure>
+          <img class="img-portfolio" src="./imagens/picture-project.jpg" alt="Project">
+          <figcaption>Project</figcaption>
+        </figure>
+      </div>
+    </section>
+    <section class="contato" id="contato container">
+      <h2>Contato</h2>
+      <div class="grid icons">
+        <a target="_blank" href="https://github.com/rafaelcouto-coder"><i class="fab fa-github"></i></a>
+        <a target="_blank" href="https://www.linkedin.com/in/rafael-couto-4b5360161/"><i class="fab fa-linkedin"></i></a>
+        <a target="_blank" href="rafaelcouto.contato@gmail.com"><i class="fas fa-envelope-square"></i></a>
+      </div>
+    </section>
 </body> 
 
 </html>
