links e texto section sobre

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     </nav>
     <div>
       <h1 class="site-title">Rafael S Couto</h1>
-      <h2 class="site-subtitle">jr. web developer</h2>
     </div>
   </header>
     <section class="sobre" id="sobre container">
@@ -32,19 +31,23 @@
       </figure>
 
       <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam asperiores recusandae dicta voluptatibus! Harum repudiandae laborum doloremque enim culpa. Qui esse rerum rem sunt vel, fugiat corporis ex officia ad.
+        Me chamo Rafael, tenho 19 anos e moro em São Paulo, tenho formação técnica em eletroeletrônica pelo SENAI e atualmente curso análise e desenvolvimento de sistema pelo Instituto Federal de São Paulo.
       </p>
 
       <p>
-        Neque corrupti aut dolore dolor repudiandae, officiis in cupiditate ex placeat adipisci iusto, officia atque molestiae laboriosam aliquam minima. Repellendus blanditiis dolores quia cum sint veritatis! Hic accusantium deleniti odio?
+        A área da tecnologia esteve presente da minha vida desde muito cedo, sempre fui apaixonado por jogos online e gadgets de inovação, e por esse motivo iniciei o curso técnico, durante todo o curso adivinha qual foi a matéria favorita? Isso mesmo! programação, para ser mais exato, programação de microcontroladores (PIC e Arduino).
       </p>
 
       <p>
-        Quo itaque maxime eius quos, doloribus ab, a enim, velit quod dicta quam. Consequuntur facere quis eum, quaerat aliquid eos ipsa accusantium cumque modi. Quos quis perspiciatis ipsam quisquam qui?
+        Na época antes mesmo de terminar o curso técnico já sabia que queria seguir a carreira de programador, iniciei com linguagem C como qualquer pessoa (ou quase) que começa aprender a programar e quando finalizei o curso técnico prestei Enem e consegui a sonhada vaga em uma instituição pública. 
       </p>
 
       <p>
-        Doloribus ea, accusantium eaque unde minus eius placeat ipsum asperiores, eos fuga laborum totam esse ratione ab neque nostrum officiis velit. Consequuntur, praesentium iure possimus officiis voluptatum non laborum blanditiis.
+        Iniciei meus estudos em front-end e back-end através do canal <a target="_blank" href="https://www.youtube.com/cursosemvideo">Curso em vídeo</a> onde tive contato pela primeira vez com as linguagens JavaScript, CSS e HTML. Desde então venho participando de diversos eventos como  <a target="_blank" href="https://rocketseat.com.br/"> SemanaOmniStack Rockeseat</a> e <a target="_blank" href="https://www.alura.com.br/">Imersão CSS Alura</a>. Sou muito grato a esses produtores de conteúdo que disponibilizam inteiramente grátis tanto reconhecimento! 
+      </p>
+      
+      <p>
+        Este site foi construído durante a Imersão CSS da Alura.
       </p>
 
     </section>
@@ -72,9 +75,15 @@
     <section class="contato" id="contato container">
       <h2>Contato</h2>
       <div class="grid icons">
-        <a target="_blank" href="https://github.com/rafaelcouto-coder"><i class="fab fa-github"></i></a>
-        <a target="_blank" href="https://www.linkedin.com/in/rafael-couto-4b5360161/"><i class="fab fa-linkedin"></i></a>
-        <a target="_blank" href="rafaelcouto.contato@gmail.com"><i class="fas fa-envelope-square"></i></a>
+        <a target="_blank" href="https://github.com/rafaelcouto-coder">
+          <i class="fab fa-github"></i>
+        </a>
+        <a target="_blank" href="https://www.linkedin.com/in/rafael-couto-4b5360161/">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a target="_blank" href="rafaelcouto.contato@gmail.com">
+          <i class="fas fa-envelope-square"></i>
+        </a>
       </div>
     </section>
 </body> 
