ajuste no tamanho das letras/responsividade
 removido @media (min-width: 1200px)

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     <h2>Sobre</h2>
     <p>
       Me chamo Rafael, tenho 19 anos e moro em São Paulo, tenho formação técnica em eletroeletrônica pelo SENAI e
-      atualmente curso análise e desenvolvimento de sistema pelo Instituto Federal de São Paulo.
+      atualmente curso análise e desenvolvimento de sistemas pelo Instituto Federal de São Paulo.
     </p>
 
     <p>
-      A área da tecnologia esteve presente da minha vida desde muito cedo, sempre fui apaixonado por jogos online e
-      gadgets de inovação, e por esse motivo iniciei o curso técnico, durante todo o curso adivinha qual foi a matéria
+      A área da tecnologia esteve presente na minha vida desde muito cedo, sempre fui apaixonado por jogos online e
+      gadgets de inovação, e por esse motivo iniciei o curso técnico. Durante todo o curso adivinha qual foi a matéria
       favorita? Isso mesmo! programação, para ser mais exato, programação de microcontroladores (PIC e Arduino).
     </p>
 
@@ -52,7 +52,7 @@
 
     <p>
       Iniciei meus estudos em front-end e back-end através do canal <a target="_blank"
-        href="https://www.youtube.com/cursosemvideo">Curso em vídeo</a> onde tive contato pela primeira vez com as
+        href="https://www.youtube.com/cursosemvideo">Curso em vídeo,</a> onde tive contato pela primeira vez com as
       linguagens JavaScript, CSS e HTML. Desde então venho participando de diversos eventos como <a target="_blank"
         href="https://rocketseat.com.br/"> SemanaOmniStack Rockeseat</a> e <a target="_blank"
         href="https://www.alura.com.br/">Imersão CSS Alura</a>. Sou muito grato a esses produtores de conteúdo que
@@ -68,13 +68,16 @@
     <h2>Portfólio</h2>
     <div class="grid">
       <figure>
-
         <a href="https://rafaelcouto-coder.github.io/Calculator/" target="_blank"><img class="img-portfolio"
             src="./imagens/calculator.png" alt="calculadora" title="Calculadora JS"></a>
-
         <figcaption>Calculadora JS</figcaption>
       </figure>
 
+      <figure>
+        <a href="https://github.com/rafaelcouto-coder/homepage" target="_blank"><img class="img-portfolio"
+            src="./imagens/homepage.png" alt="Homepage" title="Homepage HTML / CSS"></a>
+        <figcaption>Homepage</figcaption>
+      </figure>
     </div>
   </section>
 
